fix rendering of some elements on safari (#592)

--- a/src/assets/styles/partials/_snippet.scss
+++ b/src/assets/styles/partials/_snippet.scss
@@ -119,7 +119,7 @@ pre[class*='language-'] {
     min-width: 200px; // needed for layout reasons
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: auto;
 
     &.expanded-height {
       justify-content: flex-start;
